syntax="proto3";
option go_package="/model";

package model;

message NoDataMessage {}
